<resources>
    <string name="app_name">Cat Cafe</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>\
    <string name="signin_title">Login To Cat Cafe</string>
    <string name="signup_title">Register</string>
    <string name="signin_subtitle">Please login first</string>
    <string name="signup_subtitle">Create New Account</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="description">Description :</string>
    <string name="harga">Harga :</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="label_sign_in">Already Have an Account?</string>
</resources>